--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ header {
 .result {
     background-color: var(--card-bg);
     width: 350px;
+    max-width: 100%;
     padding: 30px;
     border-radius: 25px;
     -webkit-border-radius: 25px;
